Restructure notebook welcome banner

--- a/app/index.html
+++ b/app/index.html
@@ -460,10 +460,6 @@
 			</nav>
 
 			<div class="wrapper">
-				<div class="middle align-center" data-content="welcome">
-					<h2>Add some notes</h2>
-					<p>Your notebook is empty, press the plus (+) button on the top bar to create a note.</p>
-				</div>
 				<nav class="top-nav">
 					<div class="logo align-center padded-1">
 						<h1>Inbox</h1>
@@ -479,6 +475,11 @@
 						<li data-action="update" class="vertical"><span class="fa fa-cloud-download"></span><small>New Version Available</small></li>
 				    </ul>
 				</nav>
+				<div class="align-center" data-content="welcome">
+					<h2>Add some notes</h2>
+					<p>Your notebook is empty, press the plus (+) button on the top bar to create a note.</p>
+				</div>
+
 
 				<div data-content="note-container" class="grid">
 
