Improve documentation and styling

--- a/app/index.html
+++ b/app/index.html
@@ -336,7 +336,7 @@
 							<p>Share as:</p>
 							<div class="horizontal">
 								<button data-action="pgp-skrifa">Skrifa Note</button>
-								<!--<button data-action="pgp-plain">Plain Text</button>-->
+								<button data-action="pgp-plain">PGP Plain Text Message</button>
 							</div>
 						</div>
 						<div class="col s12 vertical">
