Rename Skrifa unencrypted note export option

--- a/app/index.html
+++ b/app/index.html
@@ -429,7 +429,7 @@
 				<form method="post" data-form="export-note" class="align-center padded-2">
 					<p>Remember that only the Skrifa Note format will remain encrypted, by exporting your note to any other format your content can be viewed by anyone. Select the format you want to export your note in.</p>
 					<button data-action="export-skf">Skrifa Note</button>
-					<button data-action="export-skrifa">Chrome Skrifa Note</button>
+					<button data-action="export-skrifa">Skrifa Lite Note</button>
 					<button data-action="export-md">Markdown</button>
 					<button data-action="export-html">HTML</button>
 					<button data-action="export-pdf">PDF</button>
