Add theme rules for 'Preview' and 'Settings' views

--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
 		<script src="js/share.js"></script>
 		<script src="js/pgp-message.js"></script>
 	</head>
-	<body class="playful">
+	<body class="light">
 
 		<section data-view="loading">
 			<div class="middle align-center">
