Fix final details for PR

--- a/app/index.html
+++ b/app/index.html
@@ -19,9 +19,10 @@
 		<link type="text/css" rel="stylesheet" href="style/prism.css"/>
 
 		<!-- Import Themes Stylesheets -->
-		<link type="text/css" rel="stylesheet" href="style/themes/playful.css"/>
+		<link type="text/css" rel="stylesheet" href="style/themes/light.css"/>
 		<link type="text/css" rel="stylesheet" href="style/themes/dark.css"/>
 		<link type="text/css" rel="stylesheet" href="style/themes/ghost.css"/>
+		<link type="text/css" rel="stylesheet" href="style/themes/playful.css"/>
 
 
 		<!-- Import Third Party Scripts that can't be loaded via require -->
