Fix theme names

--- a/app/index.html
+++ b/app/index.html
@@ -551,9 +551,10 @@
 					<div class="vertical align-center">
 						<h2>Theme</h2>
 						<select data-action='change-theme'>
-							<option value="playful">playful</option>
+							<option value="light">Light</option>
 							<option value="dark">Dark</option>
 							<option value="ghost">Ghost</option>
+							<option value="playful">Playful</option>
 						</select>
 					</div>
 					<div class="vertical align-center">
