--- a/app/index.html
+++ b/app/index.html
@@ -116,8 +116,8 @@
 					<label>Repeat encryption Passphrase:</label>
 					<input type="password" name="rpassphrase" required="true" placeholder="Passphrase">
 					<div>
-						<button type="submit">Create Key Pair</button>
 						<button type="reset">Cancel</button>
+						<button type="submit">Create Key Pair</button>
 					</div>
 					<span data-content="status"></span>
 				</form>
@@ -134,8 +134,8 @@
 					<label>Repeat encryption Passphrase:</label>
 					<input type="password" name="rpassphrase" required="true" placeholder="Passphrase">
 					<div>
-						<button type="submit">Import</button>
 						<button type="reset">Cancel</button>
+						<button type="submit">Import</button>
 					</div>
 					<span data-content="status"></span>
 				</form>
@@ -161,8 +161,8 @@
 					<label>Embed Code:</label>
 					<textarea placeholder="Video Embed Code"></textarea>
 					<div>
-						<button type="submit">Ok</button>
 						<button type="reset">Cancel</button>
+						<button type="submit">Ok</button>
 					</div>
 				</form>
 			</div>
@@ -172,8 +172,8 @@
 					<label>HTML Code:</label>
 					<textarea placeholder="HTML Code"></textarea>
 					<div>
-						<button type="submit">Ok</button>
 						<button type="reset">Cancel</button>
+						<button type="submit">Ok</button>
 					</div>
 				</form>
 			</div>
@@ -183,8 +183,8 @@
 					<label>HTML Code:</label>
 					<textarea placeholder="HTML Code"></textarea>
 					<div>
-						<button type="submit">Edit</button>
 						<button type="reset">Cancel</button>
+						<button type="submit">Edit</button>
 					</div>
 				</form>
 			</div>
@@ -194,8 +194,8 @@
 					<label>Select a Language</label>
 					<select name="language"></select>
 					<div>
-						<button type="submit">Ok</button>
 						<button type="reset">Cancel</button>
+						<button type="submit">Ok</button>
 					</div>
 				</form>
 			</div>
@@ -207,8 +207,8 @@
 					<label>Columns:</label>
 					<input type="number" placeholder="Columns" data-input="columns" min="0" required="true">
 					<div>
-						<button type="submit">Ok</button>
 						<button type="reset">Cancel</button>
+						<button type="submit">Ok</button>
 					</div>
 				</form>
 			</div>
@@ -220,8 +220,8 @@
 					<label>URL to link to:</label>
 					<input type="text" placeholder="Link" data-input="link" required="true">
 					<div>
-						<button type="submit">Ok</button>
 						<button type="reset">Cancel</button>
+						<button type="submit">Ok</button>
 					</div>
 				</form>
 			</div>
@@ -233,19 +233,19 @@
 					<label>Image URL:</label>
 					<input type="text" placeholder="www.example.com/image.png" required="true">
 					<div>
-						<button type="submit">Ok</button>
 						<button type="reset">Cancel</button>
+						<button type="submit">Ok</button>
 					</div>
 				</form>
 			</div>
 
-			<div data-modal="unsaved" data-insert-element="Image">
+			<div data-modal="unsaved">
 				<form data-form="unsaved" class="vertical align-center padded-1">
 					<h2>You have unsaved changes, do you want to exit? This changes will be lost.</h2>
 					<input type="hidden" required="true">
 					<div>
-						<button type="submit">Exit</button>
 						<button type="reset">Cancel</button>
+						<button type="submit">Exit</button>
 					</div>
 				</form>
 			</div>
@@ -353,9 +353,10 @@
 				<h1>Message</h1>
 				<form method="post" data-form="pgp-message">
 					<div>
-						<button type="submit">Write to File</button>
-						<button data-action="copy-message">Copy to Clipboard</button>
 						<button type="reset">Back</button>
+						<button data-action="copy-message">Copy to Clipboard</button>
+						<button type="submit">Write to File</button>
+
 					</div>
 				</form>
 				<pre data-content="message"></pre>
@@ -385,8 +386,8 @@
 					<label>Description:</label>
 					<input type="text" placeholder="What this notebook is for" data-input="description">
 					<div>
-						<button type="submit">Ok</button>
 						<button type="reset">Cancel</button>
+						<button type="submit">Ok</button>
 					</div>
 				</form>
 			</div>
@@ -401,8 +402,8 @@
 					<label>Description:</label>
 					<input type="text" placeholder="What this notebook is for" data-input="description">
 					<div>
-						<button type="submit">Save</button>
 						<button type="reset">Cancel</button>
+						<button type="submit">Save</button>
 					</div>
 				</form>
 
@@ -416,8 +417,8 @@
 					<p><input type='radio' name='strategy' value="move" required="true"> Move Notes to Inbox</p>
 					<p><input type='radio' name='strategy' value="delete" required="true"> Delete Everything</p>
 					<div>
-						<button type="submit">Delete</button>
 						<button type="reset">Cancel</button>
+						<button type="submit">Delete</button>
 					</div>
 				</form>
 			</div>
@@ -445,8 +446,8 @@
 				<form data-form="delete-note" class="vertical align-center padded-1">
 					<h2>Are you sure you want to delete this note?</h2>
 					<div>
-						<button type="submit">Delete</button>
 						<button type="reset">Cancel</button>
+						<button type="submit">Delete</button>
 					</div>
 				</form>
 			</div>
@@ -493,8 +494,8 @@
 					<input type="password" name="passphrase" required="true" placeholder="Passphrase">
 					<span class="status"></span>
 					<div>
-						<button type="submit">Migrate</button>
 						<button type="reset">Cancel</button>
+						<button type="submit">Migrate</button>
 					</div>
 				</form>
 			</div>
@@ -506,8 +507,8 @@
 					<input type="password" name="passphrase" required="true" placeholder="Passphrase">
 					<span class="status"></span>
 					<div>
-						<button type="submit">Create</button>
 						<button type="reset">Cancel</button>
+						<button type="submit">Create</button>
 					</div>
 				</form>
 			</div>
@@ -519,8 +520,8 @@
 					<input type="password" name="passphrase" required="true" placeholder="Passphrase">
 					<span class="status"></span>
 					<div>
-						<button type="submit">Clear</button>
 						<button type="reset">Cancel</button>
+						<button type="submit">Clear</button>
 					</div>
 				</form>
 			</div>
@@ -578,8 +579,8 @@
 					</div>
 
 					<div>
-						<button type="submit">Ok</button>
 						<button type="reset">Cancel</button>
+						<button type="submit">Ok</button>
 					</div>
 				</form>
 			</div>
