Minor style fixes

--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
 		<script src="node_modules/mathjax/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 
 		<!-- Import Core Scripts -->
+		<script src="js/Note.js"></script>
 		<script src="js/artemis.min.js"></script>
 		<script src="js/conf.js"></script>
 		<script src="js/app.js"></script>
