--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<meta name="description" content="A simple word processor built with web technologies.">
+		<meta http-equiv="Content-Security-Policy" content="default-src 'self' https://skrifa.xyz; style-src 'self' 'unsafe-inline'; img-src 'self' data:;">
 
 		<link rel="shortcut icon" href="img/favicon.ico"/>
 
